Correcting font-sizes, updating spacing for Our Wedding page

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ header {
 }
 
 .content {
+    font-size: 14px;
     position: relative;
     height: 100%;
     width: 100%;
@@ -114,8 +115,8 @@ header {
 }
 
 .content .rounded {
-    width: 470px;
-    height: 300px;
+    width: 33em;
+    height: 21em;
     border-radius: 140px;
 }
 
@@ -124,7 +125,6 @@ header {
 .wedding-info {
     margin: 0 auto;
     text-align: center;
-    font-size: 1.3em;
     overflow: hidden;
     color: black;
     background: white;
@@ -135,37 +135,38 @@ header {
 }
 
 .wedding-info .date {
-    top: 50px;
+    font-size: 1.4em;
+    top: 2.6em;
 }
 
 .wedding-info .location {
-    top: 40px;
-    font-size: 1.1em;
+    font-size: 1.6em;
+    top: 1.8em;
 }
 
 .wedding-info .description {
-    top: 70px;
-    font-size: 0.7em;
+    font-size: 1em;
     font-family: arial;
     font-style: italic;
+    top: 5em;
     width: 56%;
     margin: 0 auto;
 }
 
 .wedding-info .rsvp {
-    top: 100px;
+    font-size: 1.4em;
+    top: 5.1em;
     color: red;
 }
 
 .wedding-info .tag {
-    top: 120px;
-    font-size: 0.8em;
+    font-size: 1.2em;
+    top: 7.2em;
 }
 
 /* Story Page */
 
 .story {
-    font-size: 0.7em;
     overflow: hidden;
     height: 100%;
     margin: 30px 45px;
